force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/SMS_Stall_Detection_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Rules for the stalled SMS detection system.  Including who to email when stalled SMS are detected and the upper/lower bound what time periods to detect through (stalled SMS from up to two weeks ago, but no less than one hour ago).</description>
    <label>SMS Stall Detection Rule</label>
    <pluralLabel>SMS Stall Detection Rules</pluralLabel>
</CustomObject>