force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/At_Least_N_Hours_Old__c.field-meta.xml
<CustomField>
    <fullName>At_Least_N_Hours_Old__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>1</defaultValue>
    <description>The smallest number of hours to wait before adding stalled SMS to the report.
E.g. If we only want to report on SMS after they've been stalled for 1 hour, this should be 1.</description>
    <inlineHelpText>The smallest number of hours to wait before adding stalled SMS to the report.
E.g. If we only want to report on SMS after they've been stalled for 1 hour, this should be 1.</inlineHelpText>
    <label>At Least N Hours Old</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>