force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>Who should be notified with this report (comma separated)?
E.g. if you want ex1@asu.edu and ex2@asu.edu to be notified of stalled SMS, this should be:
ex1@asu.edu, ex2@asu.edu</description>
    <inlineHelpText>Who should be notified with this report (comma separated)?
E.g. if you want ex1@asu.edu and ex2@asu.edu to be notified of stalled SMS, this should be:
ex1@asu.edu, ex2@asu.edu</inlineHelpText>
    <label>Email Addresses</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>