force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <description>If this rule is enabled or not.  When disabled, no emails will be sent out for these rules.</description>
    <inlineHelpText>If this rule is enabled or not.  When disabled, no emails will be sent out for these rules.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>