force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Number_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <defaultValue>1</defaultValue>
    <description>Maximum number of days to look back, for messages to report on.
E.g. If we want to ignore stalled SMS that have been stalled for more than 5 days, this value should be 5.</description>
    <inlineHelpText>Maximum number of days to look back, for messages to report on.
E.g. If we want to ignore stalled SMS that have been stalled for more than 5 days, this value should be 5.</inlineHelpText>
    <label>Number Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>