force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Report_Fields__c.field-meta.xml
<CustomField>
    <fullName>Report_Fields__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>Which fields should be a part of the report (comma separated)?
E.g. if emails should include the Id and smagicinteract__PhoneNumber__c of the stalled SMS message, this should be:
Id, smagicinteract__PhoneNumber__c</description>
    <inlineHelpText>Which fields should be a part of the report (comma separated)?
E.g. if emails should include the Id and smagicinteract__PhoneNumber__c of the stalled SMS message, this should be:
Id, smagicinteract__PhoneNumber__c</inlineHelpText>
    <label>Report Fields</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>