force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Sender_Id_Units__c.field-meta.xml
<CustomField>
    <fullName>Sender_Id_Units__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description
    >Which Sender Id Units should be included as a part of this rule and used in the query (comma separated)?
E.g. If we are only interested in messages with SenderIdUnit__c='EdPlus', then this should be:
EdPlus</description>
    <inlineHelpText
    >Which Sender Id Units should be included as a part of this rule and used in the query (comma separated)?
E.g. If we are only interested in messages with SenderIdUnit__c='EdPlus', then this should be:
EdPlus</inlineHelpText>
    <label>Sender Id Units</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>