force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/fields/Statuses__c.field-meta.xml
<CustomField>
    <fullName>Statuses__c</fullName>
    <businessOwnerGroup>Data_Owner_SSI</businessOwnerGroup>
    <description>Which Statuses should be included as a part of this rule and used in the query (comma separated)?
E.g. If we are only interested in messages with smagicinteract__Status__c = 'SUBMITTED', then this should be:
SUBMITTED</description>
    <inlineHelpText>Which Statuses should be included as a part of this rule and used in the query (comma separated)?
E.g. If we are only interested in messages with smagicinteract__Status__c = 'SUBMITTED', then this should be:
SUBMITTED</inlineHelpText>
    <label>Statuses</label>
    <type>TextArea</type>
</CustomField>