force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/validationRules/Require_Emails.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Emails</fullName>
    <active>true</active>
    <description>There must be at least one email address to alert.</description>
    <errorConditionFormula>ISBLANK(Email_Addresses__c)</errorConditionFormula>
    <errorDisplayField>Email_Addresses__c</errorDisplayField>
    <errorMessage>There must be at least one email address to alert.</errorMessage>
</ValidationRule>