force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/validationRules/Require_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Fields</fullName>
    <active>true</active>
    <description>Must enter some fields</description>
    <errorConditionFormula>ISBLANK(Report_Fields__c)</errorConditionFormula>
    <errorDisplayField>Report_Fields__c</errorDisplayField>
    <errorMessage>Fields must have at least one field (e.g. Id) entered.</errorMessage>
</ValidationRule>