force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/validationRules/Valid_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Date_Range</fullName>
    <active>false</active>
    <description>Invalid date range.  This combination of "At Least N Hours Old" and "Number of Days" makes it so no case can be both at the same time.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(At_Least_N_Hours_Old__c)),NOT(ISBLANK(Number_Of_Days__c)),At_Least_N_Hours_Old__c &gt;= 24*Number_Of_Days__c)</errorConditionFormula>
    <errorMessage>Invalid date range.  This combination of "At Least N Hours Old" and "Number of Days" makes it so no case can be both at the same time.</errorMessage>
</ValidationRule>