force-app/main/default/objects/SMS_Stall_Detection_Rule__mdt/listViews/All_SMS_Stall_Detection_Rules.listView-meta.xml
<ListView>
    <fullName>All_SMS_Stall_Detection_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>At_Least_N_Hours_Old__c</columns>
    <columns>Number_Of_Days__c</columns>
    <columns>Statuses__c</columns>
    <columns>Enabled__c</columns>
    <columns>Email_Addresses__c</columns>
    <columns>IsProtected</columns>
    <columns>Report_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>*All SMS Stall Detection Rules</label>
    <sharedTo>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>